fix layout buttons and form z-index

--- a/app/components/ui/FormContainer/FormContainer.module.css
+++ b/app/components/ui/FormContainer/FormContainer.module.css
@@ -6,6 +6,8 @@
     background: var(--color-orange-10);
     width: 100%;
     max-width: 448px;
+    position: relative;
+    z-index: 999;
 }
 
 .form > div{
